--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,7 +2,8 @@
 
 <!--          <li><a class="page-link" href="{{ site.baseurl }}/"><i class="fa fa-home fa-lg"></i>Home</a></li> -->
 <li><a class="page-link" href="{{ site.syllabus }}"><i class="fa fa-list-ul fa-lg"></i> Syllabus</a></li>
-<li><a class="page-link" href="/lectures-materials/"><i class="fas fa-book-reader"></i> Lectures/Materials</a></li>
+<li><a class="page-link" href="/course-materials/"><i class="fas fa-book"></i> Course Materials</a></li>
+<li><a class="page-link" href="/lectures/"><i class="fas fa-book-reader"></i> Lectures</a></li>
 <!-- <li><a class="page-link" href="http://svmiller.com"><i class="fa fa-user fa-lg"></i> svmiller.com</a></li> --> 
 <li><a class="page-link" href="https://github.com/svmiller/posc1020"><i class="fab fa-github"></i> Github</a></li>
     </ul>
