--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -91,7 +91,7 @@ color: #522d80;
 }
 .site-nav  .sub-menu {
 	background: #ffffff;
-	border-color: $clemson-orange;
+	border-color: $clemson-purple;
 	min-width: 265px;
 
 	z-index:2147483647;
