let me tinker with this.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -333,3 +333,7 @@ article ul#archive > li:before {
 ul#archive li span a:hover {
        border-bottom: #bdbdbd 1px solid;
 } */
+
+
+/* article ul#archive li:nth-child(even) {background: #f3f3f3}
+article ul#archive li:nth-child(odd) {background: #fdfdfd} */
